tests/ui/not-zeroize/item_option_syntax.stderr
error: key-value macro attributes are not supported
 --> tests/ui/not-zeroize/item_option_syntax.rs:5:1
  |
5 | #[derive_where = "invalid"]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unsupported trait syntax, expected one of Clone, Copy, Debug, Default, Eq, Hash, Ord, PartialEq, PartialOrd
 --> tests/ui/not-zeroize/item_option_syntax.rs:5:18
  |
5 | #[derive_where = "invalid"]
  |                  ^^^^^^^^^
